--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FurGame TCG Store</title>
+
+    <!-- Links -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <nav>
