add media queries

--- a/index.html
+++ b/index.html
@@ -55,19 +55,21 @@
               <li><a href="#lorcana">Disney: Lorcana</a></li>
             </ul>
 
-            <h2>- Colección</h2>
+            <div class="menu-collapse">
+              <h2>- Colección</h2>
 
-            <ul>
-              <li>Originales</li>
-              <li>Accesorios</li>
-            </ul>
+              <ul>
+                <li>Originales</li>
+                <li>Accesorios</li>
+              </ul>
 
-            <h2>- Idioma</h2>
+              <h2>- Idioma</h2>
 
-            <ul>
-              <li>Español</li>
-              <li>Inglés</li>
-            </ul>
+              <ul>
+                <li>Español</li>
+                <li>Inglés</li>
+              </ul>
+            </div>
 
             <h4><i class="fa-solid fa-paw"></i> FurGame TCG Store</h4>
           </div>
